完成重构，消除了遗留问题